this is everything

--- a/src/pages/PubList.css
+++ b/src/pages/PubList.css
@@ -1,35 +1,105 @@
+@import url(https://fonts.googleapis.com/css?family=Arvo:700);
+@import url(https://fonts.googleapis.com/css?family=Seaweed+Script);
+.plate {
+  width: 410px;
+  margin: 10% auto;
+}
+.shadow {
+  color: #fff;
+  font-family: Arvo;
+  font-weight: bold;
+  text-shadow:
+    -3px -3px 0 #222,
+    3px -3px 0 #222,
+    -3px 3px 0 #222,
+    3px 3px 0 #222,
+    4px 4px 0 #fff,
+    5px 5px 0 #fff,
+    6px 6px 0 #fff,
+    7px 7px 0 #fff;
+  line-height: 0.8em;
+  letter-spacing: 0.1em;
+  transform: scaleY(0.7);
+  -webkit-transform: scaleY(0.7);
+  -moz-transform: scaleY(0.7);
+  margin:0;
+  text-align: center;
+}
+.script {
+  font-family: "Seaweed Script";
+  color: #fff;
+  text-align: center;
+  font-size: 40px;
+  position: relative;
+  margin:0;
+}
+.script span {
+  background-color: #222;
+  padding: 0 0.3em;
+}
+.script:before {
+  content:"";
+  display: block;
+  position: absolute;
+  z-index:-1;
+  top: 50%;
+  width: 100%;
+  border-bottom: 3px solid #fff;
+}
+.text1 {
+  font-size: 60px;
+}
+.text2 {
+  font-size: 169px;
+}
+.text3 {
+  font-size: 100px;
+}
+.button {
+  background-color: #C0A57D;
+  border: none;
+  color: black;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 2px 2px;
+  cursor: pointer;
+  opacity: .75;
+}
+.button5 {border-radius: 50%;}
 .results{
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
   grid-gap: 10px;
-  color: white;
+  color: black;
   border: 5px solid blue;
+  width: 100vw;
+  min-height: 10vh;
+  grid-template-columns: auto auto auto;
+  padding: 10px;
+  Font-family: "Seaweed Script";
 }
 .result{
-  display: grid;
-  place-items: center;
-  border: 30px solid red;
-
+  background-color: black (255, 255, 255, 0.8);
+  border: 4px solid rgba(0, 0, 0, 0.8);
+  padding: 4px;
+  font-size: 15px;
+  background-color: black;
+  opacity: .75;
+  text-align: center;
+  color: black;
+  min-height: 2.5vh;
+  Font-family: "Seaweed Script";
+}
+a {
+  color: white;
 }
 .pubList{
-  background-image: url('https://images.pexels.com/photos/63633/bar-local-cong-ireland-63633.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
   text-align: center;
-  height: 100vh;
-  background-size: cover;
-  background-repeat: no-repeat;
-  border: 5px solid white;
-}
-.title{
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  font-size: 39px;
-  letter-spacing: 1.8px;
-  word-spacing: 1.8px;
-  color: white;
-  font-weight: 700;
-  text-decoration: overline solid rgb(68, 68, 68);
-  font-style: italic;
-  font-variant: small-caps;
-  text-transform: none;
-  text-align: center;
-  border: 5px solid green;
+  /* border: 5px solid white; */
+  width: 100vw;
+  min-height: 100vh;
+  /* background-image: url('https://images.pexels.com/photos/248159/pexels-photo-248159.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260'); */
+
 }
