--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,3 +1,24 @@
-.nav{
-  color: white
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+
+  width: 100%;
+  top: 0;
+
+  opacity: .8;
+}
+
+.topnav a:hover {
+  background-color: blue;
+  color: white;
+}
+
+.topnav a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 30px;
+  font-family: "Seaweed Script"
 }
