--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  background-image: url('https://images.pexels.com/photos/1038935/pexels-photo-1038935.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+  background-size: cover;
+  text-align: center;
+  width: 100vw;
+  min-height: 100vh;
+  background-attachment: fixed;}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
