--- a/src/pages/Pub.css
+++ b/src/pages/Pub.css
@@ -7,6 +7,11 @@
   min-height: 100vh;
   background-attachment: fixed;
 }
+
+.y {
+    background-color: rgba(200,200,200,0.5);
+}
+
 .shadow {
   color: #fff;
   font-family: Arvo;
@@ -33,17 +38,31 @@
   color: black;
   background-color: #222;
   padding: 0 0.3em;
-  /* background: transparent; */
+  background: transparent;
 }
 
-.a{
-  font-size: 60px;
+.z {
+  font-size: 70px;
+  padding-bottom: 30px;
+  padding-top: 0px;
 }
 
 .b {
   font-size: 40px;
+  padding-bottom: 30px;
+
 }
 
 .c {
   font-size: 35px;
+  padding-top: 20px;
+}
+
+.e {
+  font-size: 35px;
+}
+
+.f {
+  font-size: 35px;
+  padding-bottom: 30px;
 }
