--- a/src/pages/PubList.css
+++ b/src/pages/PubList.css
@@ -3,6 +3,8 @@
 .plate {
   width: 410px;
   margin: 10% auto;
+  margin-bottom: 3em;
+
 }
 .shadow {
   color: #fff;
@@ -24,6 +26,7 @@
   -moz-transform: scaleY(0.7);
   margin:0;
   text-align: center;
+
 }
 .script {
   font-family: "Seaweed Script";
@@ -34,10 +37,11 @@
   margin:0;
 }
 .script span {
-  background-color: #222;
+  background: transparent;
   padding: 0 0.3em;
+
 }
-.script:before {
+/* .script:before {
   content:"";
   display: block;
   position: absolute;
@@ -45,7 +49,7 @@
   top: 50%;
   width: 100%;
   border-bottom: 3px solid #fff;
-}
+} */
 .text1 {
   font-size: 60px;
 }
@@ -56,50 +60,67 @@
   font-size: 100px;
 }
 .button {
-  background-color: #C0A57D;
-  border: none;
+  background-color: grey;
   color: black;
-  padding: 20px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
   font-size: 16px;
   margin: 2px 2px;
   cursor: pointer;
   opacity: .75;
 }
-.button5 {border-radius: 50%;}
 .results{
-  display: grid;
-  grid-gap: 10px;
-  color: black;
-  border: 5px solid blue;
+  /* border: 5px solid blue; */
   width: 100vw;
   min-height: 10vh;
   grid-template-columns: auto auto auto;
-  padding: 10px;
-  Font-family: "Seaweed Script";
+  padding: 5px;
 }
 .result{
   background-color: black (255, 255, 255, 0.8);
-  border: 4px solid rgba(0, 0, 0, 0.8);
   padding: 4px;
-  font-size: 15px;
-  background-color: black;
-  opacity: .75;
+  font-size: 25px;
+  opacity: .85;
   text-align: center;
-  color: black;
+  color: #fff;
+  font-family: Arvo;
+  font-weight: bold;
   min-height: 2.5vh;
-  Font-family: "Seaweed Script";
 }
+
+.button {
+  margin-top: 10px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  border: 2px solid white;
+  border-radius: 3px;
+  font-weight: bold;
+  margin-bottom: 20px
+}
+
+.button:hover {
+  background-color: gold; /* Green */
+  color: black;
+}
+
+
 a {
   color: white;
 }
+
+a:hover{
+  color: gold;
+}
+
 .pubList{
+  background-size: cover;
   text-align: center;
-  /* border: 5px solid white; */
   width: 100vw;
   min-height: 100vh;
-  /* background-image: url('https://images.pexels.com/photos/248159/pexels-photo-248159.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260'); */
-
+  background-attachment: fixed;
+}
+.searchBox{
+  border: none;
+  padding: 1px;
+  font-size: 16px;
+  margin: 1px 1px;
 }
