--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,10 +1,27 @@
-body {
+.homePage {
+position: relative;
 background-image: url('https://images.pexels.com/photos/248159/pexels-photo-248159.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+background-size: cover;
+width: 100vw;
+height: 100vh;
+}
+@keyframes animate {
+  from {
+     background-position: 0 0;
+  }
+  to {
+     background-position: 100 0;
+  }
+
 }
 
+img .ddad {
+  animation: 15s linear infinite;
+}
 body {
     background-size: cover;
-    border: 5px solid red;
+    /* border: 5px; opacity:0.6; */
+
     position: absolute;
     bottom: 0;
     top: 0;
@@ -18,20 +35,82 @@ body {
   word-spacing: 1.8px;
   color: white;
   font-weight: 700;
-  text-decoration: overline solid rgb(68, 68, 68);
+  /* text-decoration: overline solid rgb(68, 68, 68); */
   font-style: italic;
   font-variant: small-caps;
   text-transform: none;
   text-align: center;
-  border: 5px solid blue;
+  /* border: 5px solid blue; */
+
 }
 .homePage{
   text-align: center;
   color: white;
   border-color: white;
-  border: 5px solid white;
-  bottom: 0;
+  /* border: 2px; opacity:0.2; */
+  /* bottom: 0;
   top: 0;
   right: 0;
-  left: 0;
+  left: 0; */
+}
+
+@import url(https://fonts.googleapis.com/css?family=Arvo:700);
+@import url(https://fonts.googleapis.com/css?family=Seaweed+Script);
+body {
+  background-color: #222;
+}
+.plate {
+  width: 410px;
+  margin: 10% auto;
+}
+.shadow {
+  color: #fff;
+  font-family: Arvo;
+  font-weight: bold;
+  text-shadow:
+    -3px -3px 0 #222,
+    3px -3px 0 #222,
+    -3px 3px 0 #222,
+    3px 3px 0 #222,
+    4px 4px 0 #fff,
+    5px 5px 0 #fff,
+    6px 6px 0 #fff,
+    7px 7px 0 #fff;
+  line-height: 0.8em;
+  letter-spacing: 0.1em;
+  transform: scaleY(0.7);
+  -webkit-transform: scaleY(0.7);
+  -moz-transform: scaleY(0.7);
+  margin:0;
+  text-align: center;
+}
+.script {
+  font-family: "Seaweed Script";
+  color: #fff;
+  text-align: center;
+  font-size: 40px;
+  position: relative;
+  margin:0;
+}
+.script span {
+  background-color: #222;
+  padding: 0 0.3em;
+}
+.script:before {
+  content:"";
+  display: block;
+  position: absolute;
+  z-index:-1;
+  top: 50%;
+  width: 100%;
+  border-bottom: 3px solid #fff;
+}
+.text1 {
+  font-size: 60px;
+}
+.text2 {
+  font-size: 169px;
+}
+.text3 {
+  font-size: 100px;
 }
