--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,17 +1,17 @@
 .topnav {
   background-color: #333;
   overflow: hidden;
+
+
   width: 100%;
   top: 0;
+
   opacity: .8;
-  position: fixed;
-  z-index: 2;
 }
 
 .topnav a:hover {
-  background-color: gray;
-  color: gold;
-  transform: scale(1.1);
+  background-color: blue;
+  color: white;
 }
 
 .topnav a {
@@ -20,11 +20,5 @@
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 20px;
-  font-family: Arvo;
-  font-weight: bold;
-}
-
-.fas {
-  margin-left: 5PX;
+  font-size: 17px;
 }
