--- a/src/pages/AboutUs.css
+++ b/src/pages/AboutUs.css
@@ -1,17 +1,3 @@
-.AboutUs{
-  background-image: url('');
-  background-size: cover;
-  width: 100vw;
-  height: 100vh;
-  }
-h1{
-  color: #E8D072;
-}
-.mofos{
-    margin-left: auto;
-    margin-right: auto;
-    width: 10em;
-}
 .div{
   width: 70%;
   margin: auto;
@@ -22,21 +8,24 @@ h1{
   position: relative;
   display: inline-block;
 }
-
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
+  background-color: grey;
+  background-color: transparent;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  color: white;
+  font-weight: bold;
 }
-
 .dropdown:hover .dropdown-content {
   display: block;
 }
-
-.desc {
-  padding: 15px;
-  text-align: center;
+.usTitle{
+  border-top: 0;
+  margin-top: 0;
+  font-family: Arvo;
+  color: white;
+  background-color: #222;
+  padding: 0 0.3em;
 }
