--- a/src/pages/AboutUs.css
+++ b/src/pages/AboutUs.css
@@ -9,16 +9,19 @@
   display: inline-block;
 }
 .dropdown-content {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
   background-color: grey;
   background-color: transparent;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   color: white;
   font-weight: bold;
+  transition: all 0.4s;
 }
 .dropdown:hover .dropdown-content {
-  display: block;
+  visibility: visible;
+  opacity: 1;
 }
 .usTitle{
   border-top: 0;
@@ -27,4 +30,7 @@
   color: white;
   background-color: #222;
   padding: 0 0.3em;
+}
+.main-image{
+  margin: 0px 50px;
 }
