--- a/src/pages/PubList.css
+++ b/src/pages/PubList.css
@@ -120,7 +120,8 @@ a:hover{
 }
 .searchBox{
   border: none;
-  padding: 1px;
+  padding: 10px;
   font-size: 16px;
   margin: 1px 1px;
+  border-radius: 5px;
 }
