--- a/src/pages/AboutUs.css
+++ b/src/pages/AboutUs.css
@@ -24,12 +24,28 @@
   opacity: 1;
 }
 .usTitle{
-  border-top: 0;
-  margin-top: 0;
+  font-size: 50px;
+  color: #fff;
   font-family: Arvo;
-  color: white;
-  background-color: #222;
-  padding: 0 0.3em;
+  font-weight: bold;
+  text-shadow:
+    -3px -3px 0 #222,
+    3px -3px 0 #222,
+    -3px 3px 0 #222,
+    3px 3px 0 #222,
+    4px 4px 0 #fff,
+    5px 5px 0 #fff,
+    6px 6px 0 #fff,
+    7px 7px 0 #fff;
+  line-height: 0.8em;
+  letter-spacing: 0.1em;
+  transform: scaleY(0.7);
+  -webkit-transform: scaleY(0.7);
+  -moz-transform: scaleY(0.7);
+  margin:0;
+  text-align: center;
+  margin-top: 75px;
+  padding-bottom: 50px;
 }
 .main-image{
   margin: 0px 50px;
